<resources>
    <string name="app_name">CovInfo</string>
    <string name="backend_url">https://vt-covidapp.herokuapp.com/</string>

    <string name="main_sub_heading">Stay Updated</string>
    <string name="ImageContentDescription">Image Content Description</string>

    <string name="IndiaHomeCaseViewLabel">Covid Updates</string>
    <string name="DetailedView">Detailed View</string>

    <string name="NewsHeadlinesLabel">Latest Headlines</string>
    <string name="ViewAll">View All</string>

    <string name="DoctorSuggestionLayoutText">Know safety tips and precautions from top Doctors</string>
    <string name="MeetDeveloperLayoutText">Meet the Developers</string>

    <string name="separate_text">|</string>
    <string name="PublishedLabel">Published:</string>
    <string name="AuthorLabel">Authors:</string>
    <string name="ViewFullArticleText">Read Full Article</string>
    <string name="ProgressFragmentText">Fetching Data</string>
    <string name="GraphNotAvailableText">Time Series Data Not Available</string>
    <string name="SearchNameHint">Search</string>
    <string name="ActiveLabel">Active</string>
    <string name="ConfirmedLabel">Confirmed</string>
    <string name="RecoveredLabel">Recovered</string>
    <string name="DeceasedLabel">Deceased</string>
    <string name="SortSheetHeadingText">Filter Data</string>
    <string name="SortSheetSortSectionText">Sort By</string>
    <string name="SortSheetNameItemText">Name</string>
    <string name="SortSheetActiveItemText">Active Cases</string>
    <string name="SortSheetConfirmedItemText">Confirmed Cases</string>
    <string name="SortSheetRecoveredItemText">Recovered Cases</string>
    <string name="SortSheetDeceasedItemText">Deceased Cases</string>
    <string name="SortSheetOrderSectionText">Order Data</string>
    <string name="SortSheetIncreasingItemText">Increasing</string>
    <string name="SortSheetDecreasingItemText">Decreasing</string>
    <string name="AboutAppHeadingText">About the App</string>
    <string name="AboutAppContentText">Covinfo is a mobile application developed to let people stay up to date with the latest trends and news related to COVID-19. The App is aimed at informing the users regarding risks, best practices and relevant advisories pertaining to the COVID-19 infection.</string>
    <string name="MeetTeamHeadingText">Meet the Team</string>

    <string-array name="advice_title">
        <item>Get Vaccinated</item>
        <item>Take Care Of Elderly People</item>
        <item>Proper Treatment</item>
        <item>Meditation Is The Key</item>
        <item>Stay Inside</item>
        <item>Consult doctors</item>
        <item>Maintain Social Distance</item>
        <item>Eat Healthy Food</item>
        <item> Stay Hydrated</item>
        <item>Get Tested</item>
    </string-array>

    <string-array name="advice_message">
        <item>Vaccination is an important step to stop the pandemic.</item>
        <item>Keeps checking up on elderly people time to time.</item>
        <item>Self quarantine yourself if you started showing symptoms of COVID-19.</item>
        <item>Helps in calmness and physical relaxation, and enhance overall health.</item>
        <item>Without any reason, recommend to don’t go outside.</item>
        <item>Doctors advices are always helpful, please consult doctor before using some home remedies of treatment.</item>
        <item>Encourage others to maintain social distance.</item>
        <item>A high protein and vitamin enriched food has a big roll in maintaining health.</item>
        <item>It is necessary to drink minimum 2.7 litres of water everyday, even when you’re not thirsty.</item>
        <item>If you have symptoms of Novel Coronavirus, Do a COVID test from your nearest hospital.</item>
    </string-array>
</resources>