<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:contentPadding="@dimen/PrimaryDimen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvSortSheetTitle"
            style="@style/SectionLabelTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/SortSheetHeadingText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSortTitle"
            style="@style/SortSheetSectionTitleStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/RegularDimen"
            android:text="@string/SortSheetSortSectionText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSortSheetTitle" />

        <RadioGroup
            android:id="@+id/rgSort"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/SmallDimen"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSortTitle">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/mrbName"
                style="@style/SortSheetItemStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SortSheetNameItemText" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/mrbActive"
                style="@style/SortSheetItemStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SortSheetActiveItemText" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/mrbConfirmed"
                style="@style/SortSheetItemStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SortSheetConfirmedItemText" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/mrbRecovered"
                style="@style/SortSheetItemStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SortSheetRecoveredItemText" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/mrbDeceased"
                style="@style/SortSheetItemStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SortSheetDeceasedItemText" />

        </RadioGroup>

        <TextView
            android:id="@+id/tvOrderTitle"
            style="@style/SortSheetSectionTitleStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/RegularDimen"
            android:text="@string/SortSheetOrderSectionText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rgSort" />

        <RadioGroup
            android:id="@+id/rgOrder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/SmallDimen"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOrderTitle">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/mrbIncreasing"
                style="@style/SortSheetItemStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SortSheetIncreasingItemText" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/mrbDecreasing"
                style="@style/SortSheetItemStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SortSheetDecreasingItemText" />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>